--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,22 +3,34 @@
 
 name: Java CI with Maven
 
+#on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+
 on:
   push:
-    branches: [ master ]
+    branches: [ master, flexible ]
   pull_request:
-    branches: [ master ]
-
+    branches: [ master, flexible ]
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+#
+#  flexible
+#  on:
+#    push:
+#      branches: [ master, flexible ]
+#    pull_request:
+#      branches: [ master, flexible ]
